added share feature
